added and removed flare floss
