# app/lib/app.ts
@@ -45,6 +45,8 @@ export async function getApp(
               return controllers.unpack;
             case `${specArgs.basePath}/emulation-output`:
               return controllers.emulationOutput;
+            case `${specArgs.basePath}/generate-yara-rules`:
+              return controllers.generateYaraRule;
             default:
               throw new Error(`incorrect path ${specArgs.openApiRoute}`);
           }
